test/library/standard/Set/zippering/arrayShorter.good
4 5
arrayShorter.chpl:16: error: zippered iterations have non-equal lengths
